2010-05-04  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c: fix a bug that a string is bound to RAW,
	    its encoding was convertd to OCI.encoding.
	* ext/oci8/encoding.c: delete an unused strcuture.
	* ext/oci8/oci8.c, ext/oci8/oci8.h, ext/oci8/ocihandle.c,
	    lib/oci8/oci8.rb: do refactering to make it easy to
	    implement new authentication features.
	* lib/oci8.rb.in, lib/oci8/metadata.rb, lib/oci8/ocihandle.rb:
	    move constant definitions from metadata.rb to ocihandle.rb.

2010-05-03  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c, ext/oci8/oci8.h, lib/oci8/bindtype.rb:
	    change the length semantics from byte to char for string
	    bind variables when the Oracle client is 9i or upper.

2010-05-02  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/encoding-init.rb: fix for zero-length NLS_LANG.
	    fix AL32UTF8's nls_ratio.
	* ext/oci8/stmt.c: fix SEGV when an exception is raised in
	    post_bind_hook().

2010-04-27  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c, ext/oci8/object.c, ext/oci8/oci8.h,
	  ext/oci8/stmt.c: refactor code to prepare character length
	    semantics support.

2010-04-27  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/encoding.c: add new methods OCI8.nls_ratio
	    and OCI8.nls_ratio=. Comments for rdoc are added and
	    revised for OCI8#charset_name2id, OCI8#charset_name2id=,
	    OCI8.encoding and OCI8.encoding=.
	* lib/oci8.rb.in, lib/oci8/encoding-init.rb: set
	    OCI8.nls_ratio on initialization.

2010-04-23  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oranumber_util.c, test/test_oranumber.rb:
	    add limitted support for OraNumber's positive and negative
	    infinity. They are converted to '~' and '-~' respectively
	    as described in <URL:http://www.ixora.com.au/notes/infinity.htm>.

2010-04-23  KUBO Takehiro  <kubo@jiubao.org>
	* Makefile: fix wrong dependencies in Makefile when running
	    'make -jNNN (where NNN >= 2)'
	    (contributed by Alyano Alyanos. See bug #28129 on rubyforge.)
