@@ -21,6 +21,7 @@ ext/oci8/apiwrap.rb
 ext/oci8/apiwrap.yml
 ext/oci8/attr.c
 ext/oci8/bind.c
+ext/oci8/connection_pool.c
 ext/oci8/encoding.c
 ext/oci8/env.c
 ext/oci8/error.c
@@ -48,12 +49,14 @@ lib/dbd/OCI8.rb
 lib/oci8/.document
 lib/oci8/bindtype.rb
 lib/oci8/compat.rb
+lib/oci8/connection_pool.rb
 lib/oci8/datetime.rb
 lib/oci8/encoding-init.rb
 lib/oci8/encoding.yml
 lib/oci8/metadata.rb
 lib/oci8/object.rb
 lib/oci8/oci8.rb
+lib/oci8/ocihandle.rb
 lib/oci8/oracle_version.rb
 test/README
 test/config.rb
