@@ -69,6 +69,7 @@ require 'oci8/bindtype.rb'
 require 'oci8/metadata.rb'
 require 'oci8/compat.rb'
 require 'oci8/object.rb'
+require 'oci8/connection_pool.rb'
 
 class OCI8
   VERSION = '@@OCI8_MODULE_VERSION@@'
