@@ -3,3 +3,5 @@ object.rb
 metadata.rb
 oracle_version.rb
 oci8.rb
+ocihandle.rb
+connection_pool.rb
